--- a/.github/workflows/workflows/terraform.yml
+++ b/.github/workflows/workflows/terraform.yml
@@ -1,34 +1,37 @@
-name: Terraform CI/CD
+name: Terraform Deploy
 
 on:
   push:
     branches:
       - main
   pull_request:
-    branches:
-      - main
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v4
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.6.6
 
-      - name: Terraform Init
-        working-directory: terraform
-        run: terraform init
+    - name: Terraform Init
+      run: terraform init
+      working-directory: environments/dev
 
-      - name: Terraform Validate
-        working-directory: terraform
-        run: terraform validate
+    - name: Terraform Validate
+      run: terraform validate
+      working-directory: environments/dev
 
-      - name: Terraform Plan
-        working-directory: terraform
-        run: terraform plan
+    - name: Terraform Plan
+      run: terraform plan
+      working-directory: environments/dev
+
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/main'
+      run: terraform apply -auto-approve
+      working-directory: environments/dev
